--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="footer">
         <div>
             <div>             
                 <div>
